[package]
name = "httpf"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.7.1"
chrono = "0.4.38"
clap = { version = "4.5.13", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
env_logger = "0.11.5"
futures = { version = "0.3.30", default-features = false }
http = "1.1.0"
http-body-util = "0.1.2"
humantime = "2.1.0"
hyper = { version = "1.4.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.7", features = ["client-legacy", "http1"] }
ipnet = { version = "2.9.0", features = ["serde"] }
log = "0.4.22"
pin-project-lite = "0.2.14"
regex = "1.10.6"
rusqlite = { version = "0.32.1", features = ["chrono"] }
rustls-pemfile = "2.1.3"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.2", features = ["io-util", "macros", "net", "rt-multi-thread"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["ring", "tls12"] }
toml = "0.8.19"
